fix shrinking arrow svg-s on small screens

--- a/src/styles/components/_listItem.scss
+++ b/src/styles/components/_listItem.scss
@@ -45,6 +45,11 @@
 
   .list-item__icon {
     margin-right: 1.5rem;
+    min-width: 20px;
+
+    @include media.small-under {
+      margin: 0;
+    }
 
     & svg {
       transition: transform 200ms ease;
